--- a/pagina2.html
+++ b/pagina2.html
@@ -27,7 +27,7 @@
         </div>
         <header> <img id="header" src="header_amb_titol_practica1.png" alt="fons ciutat"></header>
         <nav>
-        	<div class="contenedor" id="inici"><a href="inici.html"><p class="texto">Inici</p></a></div>
+        	<div class="contenedor" id="inici"><a href="index.html"><p class="texto">Inici</p></a></div>
             <div class="contenedor" id="revistes"><a href=""><p class="texto">Revistes</p></a></div>
             <div class="contenedor" id="xarxa"><a href=""><p class="texto">Complement en Xarxa</p></a></div>
             <div class="contenedor" id="blogs"><a href=""><p class="texto">Blogs</p></a></div>
